...
            android:layout_width="wrap_content"
            android:layout_height="89dp"
            android:layout_gravity="fill_vertical|center_horizontal"
            android:layout_margin="8dp"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/no_photos_for_this_property"
            app:layout_constraintBottom_toBottomOf="@+id/photos_recycler_view"
            app:layout_constraintEnd_toEndOf="@+id/photos_recycler_view"
            app:layout_constraintStart_toStartOf="@+id/photos_recycler_view"
            app:layout_constraintTop_toTopOf="@+id/photos_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photos_recycler_view"
...
